<resources>
    <string name="app_name">FloodReportApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="danger">Darurat</string>
    <string name="list_laporan">Daftar Laporan Bencana Masyarakat!</string>
    <string name="maps">maps</string>
    <string name="locate_with_maps">Lokasi Dalam Maps</string>
    <string name="report">report</string>
    <string name="buat_laporan_bencana">Buat Laporan Bencana</string>
    <string name="edit_name">edit_name</string>
    <string name="about_us">About Us</string>
    <string name="banner_login_text">Hello, \nPlease Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="banner_login">banner_login</string>
    <string name="login_text_button">Login</string>
    <string name="txt_password_hint">Enter your password</string>
    <string name="txt_email_hint">Enter your Email</string>
    <string name="register_btn_txt">Dont have account? <font fgcolor="#0035f2"> Register here!</font> </string>
    <string name="or_login_with">Or Login With</string>
    <string name="google">Google</string>
    <string name="create_account_txt">Create \nAccount</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="daftar">Daftar</string>
    <string name="re_password">Re-Password</string>
    <string name="image_report_txt">Image Report</string>
    <string name="flood_app_report">Flood App Report</string>
    <string name="menu_drawer">Menu Drawer</string>
    <string name="get_started">Get Started</string>
    <string name="login_text">Already have an account? <font fgcolor="#0035f2"> Login here!</font> </string>
    <string name="gambar_banjir">Gambar Banjir</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="welcome_txt">Welcome to \nSiagApp</string>
    <string name="register_berhasil">Register Berhasil</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="username">Username</string>
    <string name="riezki">%s</string>
    <string name="ok">Ok</string>
    <string name="fitur_not_exist">Mohon maaf, Fitur saat ini sedang dalam pengembangan.</string>
    <string name="text_onboarding">Laporkan bencana di sekitarmu! \nPahami dan lakukan penanggulangan \npertama</string>
    <string name="send">Kirim</string>
    <string name="description_report">Deskripsikan Kejadian ...</string>
    <string name="desc_location">Descripsi Lokasi</string>
    <string name="tuliskan_lokasi">Tuliskan Lokasi</string>
    <string name="location">Location</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="number_phone">number_phone</string>
    <string name="indonesia">Indonesia</string>
    <string name="enter_number_phone">Masukkan nomor telepon</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="nama_pelapor">Nama Pelapor</string>
    <string name="masukkan_nama_anda">Masukkan nama anda</string>
</resources>