<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.report.create.CreateReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buat_laporan"
                android:textAlignment="center"
                android:textSize="32sp"
                style="@style/TextAppearance.AppCompat.Headline"
                android:fontFamily="@font/alfa_slab_one"
                android:paddingTop="20dp"
                android:textColor="@color/orange_dark"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="14dp"
                app:cardMaxElevation="8dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/image_upload_prev"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/gambar_banjir"/>

                    <ImageView
                        android:id="@+id/ic_image_upload"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/take_picture"
                        android:src="@drawable/ic_img_upload"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="visible"
                        app:tint="@color/grey_transparant" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="14dp"
                app:cardMaxElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_pelapor"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:id="@+id/user_report_edt"
                        android:background="@drawable/bg_edit_text"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:inputType="textPersonName"
                        app:errorEnabled="true"
                        android:hint="@string/masukkan_nama_anda"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:id="@+id/edit_text_loc"
                        android:background="@drawable/bg_edit_text"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:inputType="text"
                        app:errorEnabled="true"
                        android:hint="@string/tuliskan_lokasi"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_location"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="80dp"
                        android:id="@+id/desc_edit_text"
                        android:background="@drawable/bg_edit_text"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:inputType="textMultiLine"
                        app:errorEnabled="true"
                        android:textSize="16sp"
                        android:hint="@string/description_report"
                        android:scrollHorizontally="false"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_send"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:elegantTextHeight="true"
                        android:textSize="18sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/progressBar"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>