<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.onboarding.OnboardingFragment"
    android:orientation="vertical"
    android:background="@color/onboarding_bg_clr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toTopOf="parent"

            app:shape_arc_height="50dp"
            app:shape_arc_position="bottom">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/flood_img"/>

        </io.github.florent37.shapeofview.shapes.ArcView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcome_obd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/kavoon"
        android:paddingTop="12dp"
        android:text="@string/welcome_txt"
        android:textColor="@color/black"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/desc_obd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_onboarding"
        android:layout_marginStart="40dp"
        android:textSize="18sp"
        android:textColor="#606060"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:minWidth="180dp"
        android:layout_height="65dp"
        android:text="@string/get_started"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:backgroundTint="@color/teal_700"
        android:background="@drawable/bg_onboarding"
        android:layout_gravity="end"/>

</LinearLayout>